2009-12-19  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Alexey Proskuryakov.

        Invalid url should raise SYNTAX_ERR exception.
        https://bugs.wbekit.org/show_bug.cgi?id=32700

        * websocket/tests/bad-sub-protocol-expected.txt: add CONSOLE MESSAGEs
        * websocket/tests/script-tests/url-parsing.js: add invalid url tests.
          Also changed url from ws://127.0.0.1/ to ws://127.0.0.1:8880/websocket/tests/simple to make it sure no errors on console message for these tests by not receiving unexpected response from 127.0.0.1:80.
        * websocket/tests/url-parsing-expected.txt:
2009-12-19  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Invalid url should raise SYNTAX_ERR exception.
        https://bugs.webkit.org/show_bug.cgi?id=32700

        Check url is valid in WebSocket::connect.
        Also log the detailed reason of websocket failures to console.

        * websockets/WebSocket.cpp:
        (WebCore::WebSocket::connect):

Canonical link: https://commits.webkit.org/43812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52399 268f45cc-cd09-0410-ab3c-d52691b4dbfc